--- a/src/PA/AnnonceBundle/Resources/views/Annonce/detailAnnonce.html.twig
+++ b/src/PA/AnnonceBundle/Resources/views/Annonce/detailAnnonce.html.twig
@@ -21,17 +21,15 @@
 		
 		
 		<div class="col-md-9">
-		    <a href="http://placehold.it/700x450&text=Modifie%20moi">
-		        <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450&text=Modifie%20moi" alt="{ { annonce.antitre } }">
-		    </a>
+		    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450&text=Modifie%20moi" alt="{{ annonce.antitre }}">
 			<p>Description :</p>
 			<p>{{ annonce.andescription }}</p>
 		</div>
 
 		<div class="col-md-3">
-			<b>Prix : {{ annonce.anprix }} €</b>
+			<h3><b>Prix : {{ annonce.anprix }} €</b></h3>
 			<div class="clear"></div>
-			{% if is_granted('ROLE_ADMIN') or (is_granted('ROLE_USER') and ( app.user.id == annonce.anuserid )) %}
+			{% if is_granted('ROLE_ADMIN') or (is_granted('ROLE_USER') and ( app.user == annonce.anuser )) %}
 			<a href="{{ path('pa_annonce_modifier', {'id': annonce.anid}) }}" class="btn btn-warning" role="button"><i class="fa fa-fw fa-gear"></i>{{ 'button_edit_ads' | trans }}</a>
 			<div class="clear"></div>
 			<a href="{{ path('pa_annonce_detail_annonce', {'id': annonce.anid}) }}" class="btn btn-danger" role="button"><i class="fa fa-fw fa-times"></i>{{ 'button_delete_ads' | trans }}</a>
