--- a/src/PA/GeneralBundle/Resources/views/Default/rechercher.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/rechercher.html.twig
@@ -71,9 +71,9 @@
 						</div>
 						<div class="col-md-6">
 							<div class="form-group">
-								 <label for="type">{{ 'index_form_type' | trans }} :</label><br />
-								 <input type="radio" name="type" value="offre"> {{ 'offre' | trans }}
-								 <input type="radio" name="type" value="demande"> {{ 'demande' | trans }}<br />
+								 <label for="type">{{ 'index_form_type' | trans }}</label><br />
+								 <input type="radio" name="type" value="offre"> {{ 'Offres_title' | trans }}
+								 <input type="radio" name="type" value="demande"> {{ 'Demandes_title' | trans }}<br />
 							</div>
 						</div>
 					</div>
