--- a/src/PA/PanierBundle/Resources/views/Panier/index.html.twig
+++ b/src/PA/PanierBundle/Resources/views/Panier/index.html.twig
@@ -1,4 +1,4 @@
-
+{% block title %}{{ 'Mon_compte_panier_title' | trans }} | An Korn{% endblock %}
 {% extends "::base.html.twig" %}
 {% block body %}
 	<!-- Page Content -->
