--- a/src/PA/GeneralBundle/Resources/views/Default/index.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/index.html.twig
@@ -96,9 +96,18 @@
 
 	<!-- Display section -->
 	<div class="row">
+		{% if is_granted('ROLE_ADMIN') or is_granted('ROLE_USER') %}
 	    <div class="col-lg-12">
-	        <h2 class="page-header">{{'annonces_portfolio_title' | trans }}</h2>
+	    	<div class="inline-block">
+				<div class="input-group">
+					<h2 class="page-header">{{'annonces_portfolio_title' | trans }}</h2>
+					<span class="input-group-btn">
+						<a href="{{ path('pa_annonce_ajouter') }}"><button type="button" class="btn btn-primary pull-right"><i class="fa fa-fw fa-plus"></i>{{ 'bouton_add_ads' | trans }}</button></a><hr />
+					</span>
+				</div>
+	    	</div>
 	    </div>
+	    {% endif %}
 	    {% if annonces is not empty %}
 	    {% for annonce in annonces %}
 		    <div class="col-md-4 col-sm-6">
