--- a/src/PA/GeneralBundle/Resources/views/Default/rechercher.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/rechercher.html.twig
@@ -36,7 +36,11 @@
 						        <label for="index_form_cat">{{ 'index_form_cat' | trans }}</label>
 					        	<select name="cat" class="form-control" id="index_form_cat">
 					        		<option value="">Choisir une catégorie</option>
-					        		<option value="1">Automobile</option>
+					        		{% if categories is not empty %}
+	    							{% for categorie in categories %}					        		
+					        		<option value="{{categorie.id}}">{{categorie.libelle}}</option>
+					        		{% endfor %}
+					        		{% endif %}
 					        	</select>
 					        </div>
 						</div>
