--- a/src/PA/UserBundle/Resources/views/layout.html.twig
+++ b/src/PA/UserBundle/Resources/views/layout.html.twig
@@ -18,6 +18,20 @@
 		<!-- /.row -->
 
 		<div class="clear"></div>
+		<!-- Gestion des message flash -->
+		{% for type, messages in app.session.flashBag.all %}
+			{% for message in messages %}
+				{% if type == 'info' %}
+	                <div class="alert alert-success">
+	                    {{ message }}
+	                </div>
+	            {% else %}
+	            	<div class="alert alert-warning">
+	                    {{ message }}
+	                </div>
+	            {% endif %}
+			{% endfor %}
+		{% endfor %}
 		<!-- Display Content just if the user is connected -->
 		{% if is_granted('ROLE_USER') %}
 		<p>{{ 'connexion_already_connected' | trans }}</p>
