Modif liens images concernant les détails d'une annonce
PS : A partir d'ici, version de la prod non à jour

--- a/src/PA/AnnonceBundle/Resources/views/Annonce/detailAnnonce.html.twig
+++ b/src/PA/AnnonceBundle/Resources/views/Annonce/detailAnnonce.html.twig
@@ -21,7 +21,7 @@
 		
 		
 		<div class="col-md-9">
-		    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450&text=Modifie%20moi" alt="{{ annonce.antitre }}">
+		    <img class="img-responsive img-portfolio img-hover" src="{{ annonce.animage }}" alt="{{ annonce.antitre }}">
 			<p>Description :</p>
 			<p>{{ annonce.andescription }}</p>
 		</div>
