--- a/src/PA/AnnonceBundle/Resources/views/Annonce/detailAnnonce.html.twig
+++ b/src/PA/AnnonceBundle/Resources/views/Annonce/detailAnnonce.html.twig
@@ -21,7 +21,7 @@
 		
 		
 		<div class="col-md-9">
-		    <img class="img-responsive img-portfolio img-hover" src="{{ annonce.animage }}" alt="{{ annonce.antitre }}">
+		    <img class="img-responsive img-portfolio img-hover" src="{{ annonce.animage }}" alt="{{ annonce.antitre }}" width="450px" height="150px">
 			<p>Description :</p>
 			<p>{{ annonce.andescription }}</p>
 		</div>
@@ -34,6 +34,7 @@
 			<div class="clear"></div>
 			<a href="{{ path('pa_annonce_detail_annonce', {'id': annonce.anid}) }}" class="btn btn-danger" role="button"><i class="fa fa-fw fa-times"></i>{{ 'button_delete_ads' | trans }}</a>
 			{% endif %}
+			<h5><b>Contact : {{ annonce.anuser.email }}</b></h5>
 		</div>
 	    {% else %}
 	    {{'no_result_annonces' | trans}}
