--- a/src/PA/GeneralBundle/Resources/views/Default/index.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/index.html.twig
@@ -113,7 +113,7 @@
 		    <div class="col-md-4 col-sm-6">
 		        <div class="thumbnail">
 			        <a href="{{ path('pa_annonce_detail_annonce') }}">
-			            <img class="img-responsive img-portfolio img-hover" src="{{ annonce.animage }}" alt="" width="100%" height="100%" ><!-- width="750px" height="450px"-->
+			            <img class="img-responsive img-portfolio img-hover" src="{{ annonce.animage }}" alt="" width="750px" height="450px" ><!-- width="750px" height="450px"-->
 			        </a>
 				    <div class="text-center">
 		        		<h3>{{annonce.antitre}}<br />
