--- a/src/PA/AnnonceBundle/Resources/views/Annonce/listeannonces.html.twig
+++ b/src/PA/AnnonceBundle/Resources/views/Annonce/listeannonces.html.twig
@@ -65,9 +65,23 @@
 				        <b>{{ annonce.anprix }} €</b>
 				        <div class="clear"></div>
                         <ul class="list-inline">
+                        	<!-- ====================================== -->
+                        	<!-- Bouton "Voir les détails de l'annonce" -->
+                        	<!-- ====================================== -->
                             <li>
                             	<a href="{{ path('pa_annonce_detail_annonce', {'id': annonce.anid}) }}" class="btn btn-primary" role="button"><i class="fa fa-fw fa-info"></i>{{ 'button_voir_detail' | trans }}</a>
                             </li>
+                        	<!-- ==================================================== -->
+                            <!-- Bouton "Ajouter l'annonce au panier de l'utilisateur -->
+                        	<!-- ==================================================== -->
+                            {% if is_granted('ROLE_USER') or is_granted('ROLE_ADMIN') %}
+                            <li>
+                            	<a href="{{ path('pa_panier_ajouterannonce', {'id': annonce.anid}) }}" class="btn btn-success" role="button"><i class="fa fa-fw fa-plus"></i>{{ 'button_addAds_to_pan' | trans }}</a>
+                            </li>
+                            {% endif %}
+                        	<!-- ===================================================================================== -->
+                            <!-- Bouton "Modifier l'annonce sélectionnée si je suis admin ou le créateur de l'annonce" -->
+                        	<!-- ===================================================================================== -->
                             {% if is_granted('ROLE_ADMIN') or (is_granted('ROLE_USER') and ( app.user == annonce.anuser )) %}
 	                        <li>
 	                        	<a href="{{ path('pa_annonce_modifier', {'id': annonce.anid}) }}" class="btn btn-warning" role="button"><i class="fa fa-fw fa-gear"></i>{{ 'button_edit_ads' | trans }}</a>
