--- a/src/PA/AnnonceBundle/Resources/views/Annonce/listeannonces.html.twig
+++ b/src/PA/AnnonceBundle/Resources/views/Annonce/listeannonces.html.twig
@@ -74,10 +74,12 @@
                         	<!-- ==================================================== -->
                             <!-- Bouton "Ajouter l'annonce au panier de l'utilisateur -->
                         	<!-- ==================================================== -->
-                            {% if is_granted('ROLE_USER') or is_granted('ROLE_ADMIN') %}
-                            <li>
-                            	<a href="{{ path('pa_panier_ajouterannonce', {'id': annonce.anid}) }}" class="btn btn-success" role="button"><i class="fa fa-fw fa-plus"></i>{{ 'button_addAds_to_pan' | trans }}</a>
-                            </li>
+                            {% if is_granted('ROLE_USER') or is_granted('ROLE_ADMIN') and ( app.user != annonce.anuser )) %}
+	                            {% if annonce.antype == "offre" %}
+	                            <li>
+	                            	<a href="{{ path('pa_panier_ajouterannonce', {'id': annonce.anid}) }}" class="btn btn-success" role="button"><i class="fa fa-fw fa-plus"></i>{{ 'button_addAds_to_pan' | trans }}</a>
+	                            </li>
+	                            {% endif %}
                             {% endif %}
                         	<!-- ===================================================================================== -->
                             <!-- Bouton "Modifier l'annonce sélectionnée si je suis admin ou le créateur de l'annonce" -->
@@ -85,6 +87,9 @@
                             {% if is_granted('ROLE_ADMIN') or (is_granted('ROLE_USER') and ( app.user == annonce.anuser )) %}
 	                        <li>
 	                        	<a href="{{ path('pa_annonce_modifier', {'id': annonce.anid}) }}" class="btn btn-warning" role="button"><i class="fa fa-fw fa-gear"></i>{{ 'button_edit_ads' | trans }}</a>
+	                        </li>
+	                        <li>
+	                        	<a href="{{ path('pa_annonce_supprimer', {'id': annonce.anid}) }}" class="btn btn-danger" role="button"><i class="fa fa-fw fa-times"></i>{{ 'button_delete_ads' | trans }}</a>
 	                        </li>
                             {% endif %}
                         </ul>
