--- a/src/PA/PanierBundle/Resources/views/Panier/index.html.twig
+++ b/src/PA/PanierBundle/Resources/views/Panier/index.html.twig
@@ -43,7 +43,23 @@
 						    <div class="caption">
 						        {{ annonce.andescription }}
 						        <b>{{ annonce.anprix }} €</b>
-						        <p><a href="#" class="btn btn-primary" role="button">{{ 'voir_detail_txt' | trans }}</a></p>
+						        <div class="clear"></diV>
+		                        <ul class="list-inline">
+		                        	<!-- ====================================== -->
+		                        	<!-- Bouton "Voir les détails de l'annonce" -->
+		                        	<!-- ====================================== -->
+		                            <li>
+		                            	<a href="{{ path('pa_annonce_detail_annonce', {'id': annonce.anid}) }}" class="btn btn-primary" role="button"><i class="fa fa-fw fa-info"></i>{{ 'button_voir_detail' | trans }}</a>
+		                            </li>
+		                        	<!-- ====================================================== -->
+		                            <!-- Bouton "Supprimer l'annonce au panier de l'utilisateur -->
+		                        	<!-- ====================================================== -->
+		                            {% if is_granted('ROLE_USER') or is_granted('ROLE_ADMIN') %}
+		                            <li>
+		                            	<a href="{{ path('pa_panier_retirerannonce', {'id': annonce.anid}) }}" class="btn btn-danger" role="button"><i class="fa fa-fw fa-times"></i>{{ 'panier_button_delete' | trans }}</a>
+		                            </li>
+		                            {% endif %}
+		                        </ul>
 						    </div>
 						</div>
 			   		</div>
