--- a/src/PA/AnnonceBundle/Resources/views/Annonce/listeannonces.html.twig
+++ b/src/PA/AnnonceBundle/Resources/views/Annonce/listeannonces.html.twig
@@ -86,10 +86,10 @@
                         	<!-- ===================================================================================== -->
                             {% if is_granted('ROLE_ADMIN') or (is_granted('ROLE_USER') and ( app.user == annonce.anuser )) %}
 	                        <li>
-	                        	<a href="{{ path('pa_annonce_modifier', {'id': annonce.anid}) }}" class="btn btn-warning" role="button"><i class="fa fa-fw fa-gear"></i>{{ 'button_edit_ads' | trans }}</a>
+	                        	<a href="{{ path('pa_annonce_modifier', {'id': annonce.anid}) }}" class="btn btn-warning" role="button" title="{{ 'button_edit_ads' | trans }}"><i class="fa fa-fw fa-gear"></i></a>
 	                        </li>
 	                        <li>
-	                        	<a href="{{ path('pa_annonce_supprimer', {'id': annonce.anid}) }}" class="btn btn-danger" role="button"><i class="fa fa-fw fa-times"></i>{{ 'button_delete_ads' | trans }}</a>
+	                        	<a href="{{ path('pa_annonce_supprimer', {'id': annonce.anid}) }}" class="btn btn-danger" role="button" title="{{ 'button_delete_ads' | trans }}" ><i class="fa fa-fw fa-times"></i></a>
 	                        </li>
                             {% endif %}
                         </ul>
