--- a/src/PA/GeneralBundle/Resources/views/Default/index.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/index.html.twig
@@ -132,7 +132,7 @@
                         	<!-- ==================================================== -->
                             <!-- Bouton "Ajouter l'annonce au panier de l'utilisateur -->
                         	<!-- ==================================================== -->
-                            {% if is_granted('ROLE_USER') or is_granted('ROLE_ADMIN') %}
+                            {% if is_granted('ROLE_USER') or is_granted('ROLE_ADMIN') and ( app.user != annonce.anuser ) %}
 	                            {% if annonce.antype == "offre" %}
 	                            <li>
 	                            	<a href="{{ path('pa_panier_ajouterannonce', {'id': annonce.anid}) }}" class="btn btn-success" role="button"><i class="fa fa-fw fa-plus"></i>{{ 'button_addAds_to_pan' | trans }}</a>
@@ -144,10 +144,10 @@
                         	<!-- ===================================================================================== -->
                             {% if is_granted('ROLE_ADMIN') or (is_granted('ROLE_USER') and ( app.user == annonce.anuser )) %}
 	                        <li>
-	                        	<a href="{{ path('pa_annonce_modifier', {'id': annonce.anid}) }}" class="btn btn-warning" role="button"><i class="fa fa-fw fa-gear"></i>{{ 'button_edit_ads' | trans }}</a>
+	                        	<a href="{{ path('pa_annonce_modifier', {'id': annonce.anid}) }}" class="btn btn-warning" role="button" title="{{ 'button_edit_ads' | trans }}"><i class="fa fa-fw fa-gear"></i></a>
 	                        </li>
 	                        <li>
-	                        	<a href="{{ path('pa_annonce_supprimer', {'id': annonce.anid}) }}" class="btn btn-danger" role="button"><i class="fa fa-fw fa-times"></i>{{ 'button_delete_ads' | trans }}</a>
+	                        	<a href="{{ path('pa_annonce_supprimer', {'id': annonce.anid}) }}" class="btn btn-danger" role="button" title="{{ 'button_delete_ads' | trans }}" ><i class="fa fa-fw fa-times"></i></a>
 	                        </li>
                             {% endif %}
                         </ul>
